[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testcode"
version = "0.1.0"
description = "Python orchestration scaffold for n8n, Dify, and Coze"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "structlog>=24.2.0",
  "typer>=0.12.3",
  "PyYAML>=6.0.2",
  "streamlit>=1.37.0",
  "plotly>=5.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "nox>=2024.4.15",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: tests that require real external APIs or services",
  "e2e: end-to-end tests that exercise the full user flow",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
